@@ -1,3 +1,7 @@
+2006-01-13  Aaron Bockover  <aaron@aaronbock.net>
+
+	* src/hal-sharp.dll.config.in: This was missing, how cute
+
 2005-11-30  Aaron Bockover  <aaron@aaronbock.net>
 
 	* src/HalDevice.cs: Use DBusError when adding/removing property watch
